makko/the-internet-archive/archiveteam-warrior/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-blogger-warrior
  labels:
    app: archiveteam-blogger-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-blogger-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-blogger-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/blogger-grab
        name: blogger-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: blogger-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: blogger-data
        persistentVolumeClaim:
          claimName: archiveteam-blogger-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-youtube-warrior
  labels:
    app: archiveteam-youtube-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-youtube-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-youtube-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/youtube-grab
        name: youtube-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: youtube-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: youtube-data
        persistentVolumeClaim:
          claimName: archiveteam-youtube-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-mediafire-warrior
  labels:
    app: archiveteam-mediafire-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-mediafire-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-mediafire-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/mediafire-grab
        name: mediafire-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: mediafire-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: mediafire-data
        persistentVolumeClaim:
          claimName: archiveteam-mediafire-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-pastebin-warrior
  labels:
    app: archiveteam-pastebin-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-pastebin-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-pastebin-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/pastebin-grab
        name: pastebin-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: pastebin-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: pastebin-data
        persistentVolumeClaim:
          claimName: archiveteam-pastebin-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-imgur-warrior
  labels:
    app: archiveteam-imgur-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-imgur-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-imgur-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/imgur-grab
        name: imgur-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: imgur-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: imgur-data
        persistentVolumeClaim:
          claimName: archiveteam-imgur-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-tracker-warrior
  labels:
    app: archiveteam-tracker-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-tracker-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-tracker-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/1338-grab
        name: tracker-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: tracker-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: tracker-data
        persistentVolumeClaim:
          claimName: archiveteam-tracker-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-glitch-warrior
  labels:
    app: archiveteam-glitch-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-glitch-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-glitch-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/glitch-grab
        name: glitch-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: glitch-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: glitch-data
        persistentVolumeClaim:
          claimName: archiveteam-glitch-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-metaadlibrary-warrior
  labels:
    app: archiveteam-metaadlibrary-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-metaadlibrary-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-metaadlibrary-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/metaadlibrary-grab
        name: metaadlibrary-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: metaadlibrary-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: metaadlibrary-data
        persistentVolumeClaim:
          claimName: archiveteam-metaadlibrary-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-fc2-warrior
  labels:
    app: archiveteam-fc2-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-fc2-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-fc2-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/fc2-grab
        name: fc2-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: fc2-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: fc2-data
        persistentVolumeClaim:
          claimName: archiveteam-fc2-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-twitch-warrior
  labels:
    app: archiveteam-twitch-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-twitch-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-twitch-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/twitch-grab
        name: twitch-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: twitch-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: twitch-data
        persistentVolumeClaim:
          claimName: archiveteam-twitch-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-usgovernment-warrior
  labels:
    app: archiveteam-usgovernment-warrior
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: archiveteam-usgovernment-warrior
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archiveteam-usgovernment-warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/usgovernment-grab
        name: usgovernment-warrior
        args:
        - --concurrent
        - "1"
        - "Senk0"
        volumeMounts:
        - name: usgovernment-data
          mountPath: /data
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 48Mi
      volumes:
      - name: usgovernment-data
        persistentVolumeClaim:
          claimName: archiveteam-usgovernment-pvc
