makko/the-internet-archive/archiveteam-warrior/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: archiveteam-warrior
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "warrior.senk0.com"
  rules:
    - backendRefs:
        - name: archiveteam-warrior
          port: 8001
